k8s/infra/kube-prometheus-stack/rendered/kube-prometheus-stack/prometheus-operator/admission-webhooks/job-patch/ciliumnetworkpolicy-patchWebhook.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    helm.sh/hook: post-install,post-upgrade
    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
    helm.sh/hook-weight: "-5"
  labels:
    app: prom-admission-patch
    app.kubernetes.io/component: prometheus-operator-webhook
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prom-prometheus-operator
    app.kubernetes.io/part-of: prom
    app.kubernetes.io/version: 88.3.0
    chart: kube-prometheus-stack-88.3.0
    heritage: Helm
    release: kube-prometheus-stack
  name: kube-prom-admission-patch
  namespace: kube-prometheus-stack-system
spec:
  egress:
  - toEntities:
    - kube-apiserver
  endpointSelector:
    matchLabels:
      app: prom-admission-patch
      app.kubernetes.io/component: prometheus-operator-webhook
      app.kubernetes.io/instance: kube-prometheus-stack
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: prom-prometheus-operator
      app.kubernetes.io/part-of: prom
      app.kubernetes.io/version: 88.3.0
      chart: kube-prometheus-stack-88.3.0
      heritage: Helm
      release: kube-prometheus-stack
